--- a/ts/src/app/shared/components/header/header.component.html
+++ b/ts/src/app/shared/components/header/header.component.html
@@ -2,13 +2,13 @@
   class="w-full flex flex-wrap md:flex-row justify-between py-1 px-9 bg-tertiary items-center gap-4"
 >
   <div class="flex flex-col gap-[2px]">
-    <p class="text-sm">
+    <p class="text-sm leading-none">
       Anais do Simpósio Latino Americano de Ciências de Alimentos
     </p>
-    <h3 class="text-xl">
+    <h3 class="text-xl leading-5">
       Anais do 13º Simpósio Latino Americano de Ciência de Alimentos
     </h3>
-    <span>ISSN: 1234-5678</span>
+    <span class="leading-none">ISSN: 1234-5678</span>
   </div>
   <button class="flex flex-row gap-1 border border-[#CCCCCC] p-2 rounded">
     <img src="assets/icons/language.jpg" alt="" />
@@ -16,7 +16,7 @@
     <img src="" alt="" />
   </button>
   <div class="flex gap-4 items-center">
-    <div class="flex flex-col gap-1 text-end font-quick">
+    <div class="flex flex-col text-end font-quick">
       <p class="text-sm">Bem vindo!</p>
       <p class="text-xs">alguem12@galoascience.com</p>
     </div>
