--- a/ts/src/app/shared/components/nav-menu/nav-menu.component.html
+++ b/ts/src/app/shared/components/nav-menu/nav-menu.component.html
@@ -1,6 +1,6 @@
 <nav class="w-full h-full flex flex-col gap-2 bg-white drop-shadow-xl">
   <h1
-    class="w-full bg-gradient-to-b from-secondary to-primary text-center text-2xl font-medium font-roboto text-white py-6 uppercase"
+    class="w-full bg-gradient-to-b from-secondary to-primary text-center text-2xl font-medium font-roboto text-white py-[14px] uppercase"
   >
     slaca 2019
   </h1>
