--- a/ts/src/app/shared/components/nav-menu/nav-menu.component.html
+++ b/ts/src/app/shared/components/nav-menu/nav-menu.component.html
@@ -1,4 +1,6 @@
-<nav class="w-full h-full flex flex-col gap-2 bg-white drop-shadow-xl">
+<nav
+  class="fixed top-0 left-0 right-[84%] h-full w-auto flex flex-col gap-2 bg-white drop-shadow-xl"
+>
   <h1
     class="w-full bg-gradient-to-b from-secondary to-primary text-center text-2xl font-medium font-roboto text-white py-[14px] uppercase"
   >
@@ -7,7 +9,7 @@
   <img src="assets/images/logotipo.png" alt="" />
   <div class="w-full flex flex-col">
     <a
-      class="font-quick border-b-2 py-2 pl-6 border-[#E7E7E7] hover:bg-tertiary"
+      class="font-quick border-b-2 py-2 px-6 border-[#E7E7E7] hover:bg-tertiary"
       routerLink="/home"
     >
       Apresentação
