--- a/ts/src/app/shared/components/resume/resume.component.html
+++ b/ts/src/app/shared/components/resume/resume.component.html
@@ -1,5 +1,26 @@
-<!--
-    to do: add resume component
-  <div>
-  <h4 class="w-full bg-tertiary text-xl font-medium px-4 py-3">Detalhes</h4>
-</div> -->
+<div class="flex flex-col border border-[#ECECEC] rounded overflow-hidden">
+  <h4 class="w-full bg-tertiary text-xl font-medium px-4 py-3">Resumo</h4>
+  <div class="text-sm p-3 text-[#5C5C5C]" *ngIf="!mostrarCompleto">
+    <p class="text-justify font-quick font-normal">
+      {{ resumoTexto }}
+      <button
+        class="btn-show-more inline text-primary font-bold"
+        (click)="expandirTexto()"
+        *ngIf="!mostrarCompleto"
+      >
+        ver mais
+      </button>
+    </p>
+  </div>
+  <div
+    class="flex flex-col gap-8 text-sm p-3 text-[#5C5C5C]"
+    *ngIf="mostrarCompleto"
+  >
+    <p
+      *ngFor="let texto of textoCompleto"
+      class="text-justify font-quick font-normal"
+    >
+      {{ texto }}
+    </p>
+  </div>
+</div>
