--- a/ts/src/app/shared/components/header/header.component.html
+++ b/ts/src/app/shared/components/header/header.component.html
@@ -10,11 +10,13 @@
     </h3>
     <span class="leading-none">ISSN: 1234-5678</span>
   </div>
-  <button class="flex flex-row gap-1 border border-[#CCCCCC] p-2 rounded">
+  <a
+    class="flex flex-row gap-1 border border-[#CCCCCC] p-2 rounded cursor-pointer"
+  >
     <img src="assets/icons/language.jpg" alt="" />
     <span>PT, BR</span>
     <img src="" alt="" />
-  </button>
+  </a>
   <div class="flex gap-4 items-center">
     <div class="flex flex-col text-end font-quick">
       <p class="text-sm">Bem vindo!</p>
